{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Ground",
            "id": "0124faee-9c47-4766-9312-9c17960d3fcb",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "d985c0fa-f35e-4b92-a9d4-5f27b17c6c51",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "03f7c70d-2dfd-4941-b059-cb54f22362da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "0020b5ac-dccd-4743-b688-753570498e27",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "43174cdb-c4a5-4653-ae85-8b22c607410e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "ce77f359-1898-4e6d-a635-63d380430d11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Act",
                    "type": "Button",
                    "id": "3f196d94-67c4-4f3a-a052-91f3af7efac1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "88035354-2715-46f4-8b51-e0099cd75375",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ef1837a4-11a4-474a-a727-6a3f449f5ade",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "97d3c09f-7b6b-406f-bae0-988a1a10182d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "611a1b34-0a0f-4be0-a32e-ccfafa4bec77",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ca171257-d5c5-4f55-9c93-afdadb697c75",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d4f85f2e-eb43-40e2-a381-fbde87142adf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64ee8e97-aeb5-435d-920e-bdbabd5f8329",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55f27096-dc27-4068-b21e-ca3ab968a3fa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b75f1f6e-abe6-4a68-bf69-dfcc6edc09bb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34f91b85-fa50-4223-87b6-6594860138b6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Act",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Global",
            "id": "281d5af6-3cb5-4be5-b0e4-38bfa6102065",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "6ca5d99d-d854-45eb-90ec-c8dbf07e87f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpToLevel1",
                    "type": "Button",
                    "id": "54a03e28-7a6d-4088-b349-51790c3b8e44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpToLevel2",
                    "type": "Button",
                    "id": "d5d1ed35-52e5-49cd-b91d-8e42cccc914e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpToLevel3",
                    "type": "Button",
                    "id": "e420dc00-7d51-483d-89b7-7983c23a5372",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f6f36e7b-de91-4de6-be94-7a67cdf1bfdc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69ad22d1-a880-4fe4-a4be-ee84faa4e522",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpToLevel1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42f1092b-69cb-471e-a64c-bf8558cc8aa1",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpToLevel2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a68a45c-d893-4c67-bb9b-1581b0310b96",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpToLevel3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "World",
            "id": "7dc36365-7211-46e7-8c24-9bd544037c6b",
            "actions": [
                {
                    "name": "CameraEnter",
                    "type": "Button",
                    "id": "84eedb26-0554-45e6-a5e1-6b304d3ad1fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraExit",
                    "type": "Button",
                    "id": "0db8709e-b29f-4805-8737-f147c7f522d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24cc30e6-8741-495f-865b-39cddde59517",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraEnter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f42bd6e-219c-42a7-ae1e-dace260bb6c3",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraExit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}